--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -49,10 +49,13 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+body {
+  background: #ededed; }
+
 .wrapper {
   max-width: 1100px;
-  border: 1px solid blue;
-  margin: 0 auto; }
+  margin: 0 auto;
+  text-align: center; }
 
 header.dashboard__header {
   padding: 32px 0; }
@@ -62,27 +65,57 @@ header.dashboard__header {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 32px;
-  align-items: center; }
+  align-items: stretch; }
 
-.grid__item:nth-child(3), .grid__item:nth-child(5) {
-  grid-column: 3 / span 2; }
-.grid__item:nth-child(4) {
-  grid-column: 1 / span 2; }
+.grid__item {
+  align-self: stretch; }
+  .grid__item:nth-child(3) {
+    grid-row: 1 / span 2;
+    grid-column: 3 / span 2; }
+  .grid__item:nth-child(5) {
+    grid-column: 3 / span 2; }
+  .grid__item:nth-child(4) {
+    grid-column: 1 / span 2; }
 
-.flex {
-  display: flex;
-  justify-content: space-around; }
+.inner-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 32px; }
 
 /* Cards */
 .card {
+  display: flex;
+  align-items: center;
   padding: 16px;
   border: 1px solid #dfdfdf;
-  width: 23%;
-  font: 700 2rem/100% "Dosis", sans-serif; }
+  font: 700 2rem/100% "Dosis", sans-serif;
+  background: white;
+  box-shadow: 0px 16px 48px -10px rgba(0, 0, 0, 0.4); }
+  .card .card__content {
+    width: 100%; }
   .card h3 {
     font-size: 0.8rem;
     font-weight: 300;
     text-transform: uppercase; }
+
+/* Form */
+.form {
+  padding: 32px 0; }
+  .form .input {
+    padding: 16px;
+    width: 50%;
+    max-width: 200px;
+    border: 1px solid #ededed;
+    font: normal 1rem/100% "Dosis", sans-serif;
+    margin: 0; }
+  .form button.btn {
+    font-size: 1.5rem;
+    padding: 12px 8px;
+    border: none;
+    background: none;
+    margin: 0 0 0 4px; }
+    .form button.btn:hover {
+      cursor: pointer; }
 
 /* Typography */
 h1 {
@@ -90,5 +123,16 @@ h1 {
 
 h2 {
   font: 400 1.5rem/100% "Dosis", sans-serif; }
+
+.site-title {
+  font-weight: 700;
+  padding: 32px 0 0; }
+
+.dashboard.hidden {
+  position: absolute;
+  left: -200%; }
+
+.dashboard.visible {
+  position: relative; }
 
 /*# sourceMappingURL=styles.css.map */
