--- a/frontend/src/sass/styles.scss
+++ b/frontend/src/sass/styles.scss
@@ -3,10 +3,14 @@
 @import "settings";
 @import "reset";
 
+body {
+    background: #ededed;
+}
+
 .wrapper {
     max-width: 1100px;
-    border: 1px solid blue;
     margin: 0 auto;
+    text-align: center;
 }
 
 header.dashboard__header {
@@ -19,12 +23,17 @@ header.dashboard__header {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-gap: $padding--sm;
-    align-items: center;
+    align-items: stretch;
 }
 
 .grid__item {
     // border: 1px solid tomato;
-    &:nth-child(3), &:nth-child(5) {
+    align-self: stretch;
+    &:nth-child(3) {
+        grid-row: 1 / span 2;
+        grid-column: 3 / span 2;
+    }
+    &:nth-child(5) {
         grid-column: 3 / span 2;
     }
     &:nth-child(4) {
@@ -32,25 +41,61 @@ header.dashboard__header {
     }
 }
 
-.flex {
-    display: flex;
-    justify-content: space-around;
+.inner-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: $padding--sm;
 }
 
 
 /* Cards */
 
 .card {
+    display: flex;
+    align-items: center;
     padding: $padding--xs;
     border: 1px solid #dfdfdf;
-    width: 23%;
     font: 700 2rem/100% "Dosis", sans-serif;
+    background: white;
+    box-shadow: 0px 16px 48px -10px rgba(0,0,0,0.4);
+
+    .card__content {
+        width: 100%;
+    }
 
     h3 {
         font-size: 0.8rem;
         font-weight: 300;
         text-transform: uppercase;
     }
+}
+
+
+/* Form */
+
+.form {
+    padding: $padding--sm 0;
+
+    .input {
+        padding: $padding--xs;
+        width: 50%;
+        max-width: 200px;
+        border: 1px solid #ededed;
+        font: normal 1rem/100% "Dosis", sans-serif;
+        margin: 0;
+    }
+
+    button.btn {
+        font-size: 1.5rem;
+        padding: $padding--xxs+4px $padding--xxs;
+        border: none;
+        background: none;
+        margin: 0 0 0 4px;
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
 }
 
 
@@ -62,4 +107,19 @@ h1 {
 
 h2 {
     font: 400 1.5rem/100% "Dosis", sans-serif;
+}
+
+
+.site-title {
+    font-weight: 700;
+    padding: $padding--sm 0 0;
+}
+
+.dashboard.hidden {
+    position: absolute;
+    left: -200%;
+}
+
+.dashboard.visible {
+    position: relative;
 }
