--- a/frontend/src/sass/styles.scss
+++ b/frontend/src/sass/styles.scss
@@ -4,17 +4,20 @@
 @import "reset";
 
 body {
-    background: #ededed;
+    background: #e3e3e3;
 }
 
 .wrapper {
-    max-width: 1100px;
+    max-width: $page--maxwidth;
     margin: 0 auto;
     text-align: center;
 }
 
 header.dashboard__header {
-    padding: $padding--sm 0;
+    padding: $padding--md 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Grid */
@@ -34,7 +37,9 @@ header.dashboard__header {
         grid-column: 3 / span 2;
     }
     &:nth-child(5) {
-        grid-column: 3 / span 2;
+        border-top: 1px solid #bbb;
+        grid-column: 1 / span 4;
+        padding: $padding--sm 0;
     }
     &:nth-child(4) {
         grid-column: 1 / span 2;
@@ -57,6 +62,7 @@ header.dashboard__header {
     border: 1px solid #dfdfdf;
     font: 700 2rem/100% "Dosis", sans-serif;
     background: white;
+    border-radius: 3px;
     box-shadow: 0px 16px 48px -10px rgba(0,0,0,0.4);
 
     .card__content {
@@ -64,8 +70,10 @@ header.dashboard__header {
     }
 
     h3 {
-        font-size: 0.8rem;
+        font-size: 0.88rem;
         font-weight: 300;
+        padding: 5px 0 2px;
+        letter-spacing: 0.05rem;
         text-transform: uppercase;
     }
 }
@@ -74,20 +82,44 @@ header.dashboard__header {
 /* Form */
 
 .form {
-    padding: $padding--sm 0;
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding: $padding--xs;
+    margin: $padding--xs 0;
+    background: white;
+    box-shadow: 0px 14px 38px -12px rgba(0,0,0,0.33),
+                0px 8px 21px -10px rgba(0,0,0,0.25);
+
+    form {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        border: 1px solid #efefef;
+        padding: 3px 4px;
+        span {
+            font: normal 1.15rem/100% "helvetica", sans-serif;
+            color: #222;
+            padding: 0 4px;
+            vertical-align: top;
+        }
+    }
 
     .input {
-        padding: $padding--xs;
-        width: 50%;
-        max-width: 200px;
-        border: 1px solid #ededed;
+        border: none;
+        //border-bottom: 1px solid black;
         font: normal 1rem/100% "Dosis", sans-serif;
+        color: #222;
         margin: 0;
+        width: 100%;
+        &:focus {
+            outline: none;
+        }
     }
 
     button.btn {
         font-size: 1.5rem;
-        padding: $padding--xxs+4px $padding--xxs;
+        padding: 4px;
         border: none;
         background: none;
         margin: 0 0 0 4px;
@@ -106,13 +138,46 @@ h1 {
 }
 
 h2 {
-    font: 400 1.5rem/100% "Dosis", sans-serif;
+    font: 400 1.5rem/120% "Dosis", sans-serif;
+    padding: 0 0 4px;
+    vertical-align: middle;
+    span {
+        background-color: $color__lightening;
+        padding: 4px;
+    }
+}
+
+h4 {
+    font: 700 2.5rem/120% "Dosis", sans-serif;
+    padding: 0 0 0 $padding--xs;
 }
 
 
 .site-title {
     font-weight: 700;
-    padding: $padding--sm 0 0;
+    font-size: 1.25rem;
+    width: 224px;
+    padding-left: 56px;
+    text-align: left;
+    vertical-align: middle;
+}
+
+.empty-message {
+    position: absolute;
+    top: 200px;
+    left: 50%;
+    transform: translateX(-50%);
+    font: 700 2.25rem/120% "Dosis", sans-serif;
+    color: #AAA;
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+img.logo {
+    position: absolute;
+    top: -10px; left: 0;
+    display: inline-block;
+    height: 5rem;
 }
 
 .dashboard.hidden {
