--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -50,7 +50,7 @@ table {
   border-spacing: 0; }
 
 body {
-  background: #e3e3e3; }
+  background: #e2e2e2; }
 
 .wrapper {
   max-width: 1140px;
@@ -109,6 +109,7 @@ header.dashboard__header {
 /* Form */
 .form {
   position: relative;
+  z-index: 10;
   display: flex;
   align-items: center;
   padding: 16px;
@@ -189,6 +190,7 @@ img.logo {
   left: -200%; }
 
 .dashboard.visible {
-  position: relative; }
+  position: relative;
+  background: #e2e2e2; }
 
 /*# sourceMappingURL=styles.css.map */
